--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-AUTH0_AUTH_URL = https://dev-jrku6te1l2gvjujj.us.auth0.com/authorize
-AUTH0_TOKEN_URL = https://dev-jrku6te1l2gvjujj.us.auth0.com/oauth/token
-AUTH0_CLIENT_ID = JGYowoCom0Wb69oq2HM8IgpVIzLMgK34
-AUTH0_CLIENT_SECRET = fqcWDOtDfWi3E3JJTfUueI9bwpmnvirJJaaIi_G3e7I0tnwNKLJpsrzRlgn8TkoU
-AUTH0_JWKS_URL = https://dev-jrku6te1l2gvjujj.us.auth0.com/.well-known/jwks.json
-AUTH0_REDIRECT_URL = http://localhost:3000/auth0callback
-AUTH0_AUDIENCE=https://auth-iac-sm-cmk-dev-fra.highend.engg-services.com
+AUTH0_AUTH_URL = 
+AUTH0_TOKEN_URL = 
+AUTH0_CLIENT_ID = 
+AUTH0_CLIENT_SECRET = 
+AUTH0_JWKS_URL = 
+AUTH0_REDIRECT_URL = 
+AUTH0_AUDIENCE=
 
-HTTP_PROXY = http://proxy-sg-singapore.gemalto.com:8080
-HTTPS_PROXY = http://proxy-sg-singapore.gemalto.com:8080
-SERVER_PORT = 3000
-SENTINEL_CLIENT_ID = app-39625931-3f06-42f1-99ee-09307774658f
+HTTP_PROXY = 
+HTTPS_PROXY = 
+SERVER_PORT = 
+SENTINEL_CLIENT_ID =
 SENTINEL_CLIENT_SECRET =
-SENTINEL_AUTH_URL = https://auth-iac-sm-cmk-dev-fra.highend.engg-services.com/auth/realms/c32852e4-3e49-4fc0-8ae6-a566a94d39a9/protocol/openid-connect/auth
-SENTINEL_TOKEN_URL = https://auth-iac-sm-cmk-dev-fra.highend.engg-services.com/auth/realms/c32852e4-3e49-4fc0-8ae6-a566a94d39a9/protocol/openid-connect/token
-SENTINEL_JWKS_URL = https://auth-iac-sm-cmk-dev-fra.highend.engg-services.com/auth/realms/c32852e4-3e49-4fc0-8ae6-a566a94d39a9/protocol/openid-connect/certs
-SENTINEL_REDIRECT_URL = http://localhost:3000/sentinelcallback
+SENTINEL_AUTH_URL = 
+SENTINEL_TOKEN_URL = 
+SENTINEL_JWKS_URL = 
+SENTINEL_REDIRECT_URL =
